added ability to retrieve usb info from linux